--- a/views/orders/history.ejs
+++ b/views/orders/history.ejs
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Admin - Books</title>
+    <title>Admin - Orders</title>
 
     <!-- Custom fonts -->
     <link href="/stylesheets/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -55,14 +55,14 @@
                 Interface
             </div>
 
-            <!-- Nav Item - Manage Books Collapse Menu -->
-            <li class="nav-item active">
+            <!-- Nav Item - Pages Collapse Menu -->
+            <li class="nav-item">
                 <a class="nav-link" href="/books">
                     <i class="fas fa-fw fa-inbox"></i>
                     <span>Manage Books</span></a>
             </li>
 
-            <!-- Nav Item - Manage Orders Collapse Menu -->
+            <!-- Nav Item - Manage Orders -->
             <li class="nav-item">
                 <a class="nav-link" href="/orders">
                     <i class="fas fa-fw fa-chart-area"></i>
@@ -78,11 +78,12 @@
             </div>
 
             <!-- Nav Item - History -->
-            <li class="nav-item">
+            <li class="nav-item active">
                 <a class="nav-link" href="/orders/history">
                     <i class="fas fa-fw fa-chart-area"></i>
                     <span>History</span></a>
             </li>
+
 
             <!-- Divider -->
             <hr class="sidebar-divider d-none d-md-block">
@@ -109,7 +110,7 @@
                         <i class="fa fa-bars"></i>
                     </button>
 
-                    <h1 class="h3 mb-0 text-gray-600">Manage Books</h1>
+                    <h1 class="h3 mb-0 text-gray-600">Manage Orders</h1>
 
                     <!-- Topbar Navbar -->
                     <ul class="navbar-nav ml-auto">
@@ -120,7 +121,7 @@
                         <li class="nav-item dropdown no-arrow">
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <span class="mr-2 d-none d-lg-inline text-gray-600 bold"> <% if(data1.length) { %> <%= data1[0].user_username %>   <% } %> </span>
+                                <span class="mr-2 d-none d-lg-inline text-gray-600 bold"><% if(data1.length) { %> <%= data1[0].user_username %>   <% } %> </span>
                                 <img class="img-profile rounded-circle" src="/images/undraw_profile_1.svg">
                             </a><!-- Dropdown - User Information -->
                             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
@@ -151,10 +152,7 @@
                     <div class="card">
                         <div class="card-header">
                             <ul class="nav nav-pills w-100">
-                                <li class="nav-link">Books</li>
-                                <li class="nav-link ml-auto">
-                                    <a href="/books/add" class="nav-link active">Add Book</a>
-                                </li>
+                                <li class="nav-link">Orders</li>
                             </ul>
                         </div>
                         <div class="card-body">
@@ -163,11 +161,12 @@
                                     <thead>
                                         <tr>
                                             <th scope="col">#</th>
+                                            <th scope="col">Customer Name</th>
+                                            <th scope="col">Book Name</th>
+                                            <th scope="col">Total Price</th>
+                                            <th scope="col">Quantity</th>
                                             <th scope="col">Image</th>
-                                            <th scope="col">Name</th>
-                                            <th scope="col">Details</th>
-                                            <th scope="col">Price</th>
-                                            <th scope="col">Type</th>
+                                            <th scope="col">Status</th>
                                             <th width="200px">Action</th>
                                         </tr>
                                     </thead>
@@ -175,26 +174,28 @@
                                         <% for(let i=0; i < data.length; i++) { %>
                                             <tr>
                                                 <th scope="row">
-                                                    <%= data[i].book_id %>
+                                                    <%= data[i].order_details_id %>
                                                 </th>
                                                 <td>
-                                                    <img src="/<%= data[i].book_image %>" alt="Image" height="75px" width="55px">
+                                                    <%= data[i].user_cusname%>
                                                 </td>
                                                 <td>
-                                                    <%= data[i].book_name %>
+                                                    <%= data[i].book_name%>
                                                 </td>
                                                 <td>
-                                                    <%= data[i].book_details %>
+                                                    <%= data[i].order_totalprice %>
                                                 </td>
                                                 <td>
-                                                    <%= data[i].book_price %>
+                                                    <%= data[i].order_details_qty %>
                                                 </td>
                                                 <td>
-                                                    <%= data[i].book_type %>
+                                                    <img src="/<%= data[i].payment_image %>" alt="Image" height="75px" width="55px">
                                                 </td>
                                                 <td>
-                                                    <a href="/books/edit/<%=data[i].book_id%>" class="btn btn-success edit">Edit</a>
-                                                    <a onclick= "deletefunction(<%=data[i].book_id%>)" class="btn btn-danger delete">Delete</a>
+                                                    <%= data[i].order_status %>
+                                                </td>
+                                                <td>
+                                                    <a href="/orders/views/<%= data[i].order_details_id %> " class="btn btn-success edit">View</a>
                                                 </td>
                                             </tr>
                                             <% } %>
@@ -256,33 +257,6 @@
             </div>
         </div>
     </div>
-
-
-    <script>
-        function deletefunction(id) {
-            Swal.fire({
-                title: 'Are you sure?',
-                text: "You won't be able to revert this!",
-                icon: 'warning',
-                showCancelButton: true,
-                confirmButtonColor: '#3085d6',
-                cancelButtonColor: '#d33',
-                confirmButtonText: 'Yes, delete it!'
-            }).then((result) => {
-                if (result.isConfirmed) {
-                    Swal.fire({
-                        title: 'Deleted!',
-                        text: "Your product has been deleted.",
-                        icon: 'success',
-                        confirmButtonColor: '#6659ef',
-                        confirmButtonText: 'OK'
-                    }).then((result) =>{
-                        window.location = '/books/delete/' + id;
-                    })
-                }
-            })
-        }
-    </script>
 
 
     <!-- Bootstrap core JavaScript-->
