--- a/views/orders/orders.ejs
+++ b/views/orders/orders.ejs
@@ -55,14 +55,14 @@
                 Interface
             </div>
 
-            <!-- Nav Item - Pages Collapse Menu -->
+            <!-- Nav Item - Manage Books -->
             <li class="nav-item">
                 <a class="nav-link" href="/books">
                     <i class="fas fa-fw fa-inbox"></i>
                     <span>Manage Books</span></a>
             </li>
 
-            <!-- Nav Item - Utilities Collapse Menu -->
+            <!-- Nav Item - Manage Orders -->
             <li class="nav-item active">
                 <a class="nav-link" href="/orders">
                     <i class="fas fa-fw fa-chart-area"></i>
@@ -77,18 +77,11 @@
                 Addons
             </div>
 
-            <!-- Nav Item - Charts -->
+            <!-- Nav Item - History -->
             <li class="nav-item">
-                <a class="nav-link" href="charts.html">
+                <a class="nav-link" href="/orders/history">
                     <i class="fas fa-fw fa-chart-area"></i>
-                    <span>Charts</span></a>
-            </li>
-
-            <!-- Nav Item - Tables -->
-            <li class="nav-item">
-                <a class="nav-link" href="tables.html">
-                    <i class="fas fa-fw fa-table"></i>
-                    <span>Tables</span></a>
+                    <span>History</span></a>
             </li>
 
             <!-- Divider -->
@@ -116,7 +109,7 @@
                         <i class="fa fa-bars"></i>
                     </button>
 
-                    <h1 class="h3 mb-0 text-gray-600">Manage Books</h1>
+                    <h1 class="h3 mb-0 text-gray-600">Manage Orders</h1>
 
                     <!-- Topbar Navbar -->
                     <ul class="navbar-nav ml-auto">
@@ -127,7 +120,7 @@
                         <li class="nav-item dropdown no-arrow">
                             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <span class="mr-2 d-none d-lg-inline text-gray-600 bold"> Proy3258 </span>
+                                <span class="mr-2 d-none d-lg-inline text-gray-600 bold"><% if(data1.length) { %> <%= data1[0].user_username %>   <% } %> </span>
                                 <img class="img-profile rounded-circle" src="/images/undraw_profile_1.svg">
                             </a><!-- Dropdown - User Information -->
                             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in"
@@ -201,9 +194,9 @@
                                                     <%= data[i].order_status %>
                                                 </td>
                                                 <td>
-                                                    <a href="#" class="btn btn-success edit">View</a>
-                                                    <a href="#" class="btn btn-success edit">Edit</a>
-                                                    <a onclick= "deletefunction(<%=data[i].book_id%>)" class="btn btn-danger delete">Delete</a>
+                                                    <a href="/orders/views/<%= data[i].order_details_id %> " class="btn btn-success edit">View</a>
+                                                    <a href="/orders/edit/<%= data[i].order_details_id %> " class="btn btn-success edit">Edit</a>
+                                                    <a onclick= "deletefunction(<%=data[i].order_details_id%>)" class="btn btn-danger delete">Delete</a>
                                                 </td>
                                             </tr>
                                             <% } %>
@@ -267,7 +260,7 @@
     </div>
 
 
-    <!-- <script>
+    <script>
         function deletefunction(id) {
             Swal.fire({
                 title: 'Are you sure?',
@@ -286,12 +279,12 @@
                         confirmButtonColor: '#6659ef',
                         confirmButtonText: 'OK'
                     }).then((result) =>{
-                        window.location = '/books/delete/' + id;
+                        window.location = '/orders/delete/' + id;
                     })
                 }
             })
         }
-    </script> -->
+    </script>
 
 
     <!-- Bootstrap core JavaScript-->
