--- a/views/index.ejs
+++ b/views/index.ejs
@@ -157,7 +157,7 @@
                     <p><%= data1[i].book_price%> บาท</p>
                   </a>
                   <p><%= data1[i].book_details %></p>
-                  <a href="#"><i class="fa fa-cart-plus"></i></a>
+                  <a onclick="addcart(<%= data1[i].book_id %>)"><i class="fa fa-cart-plus"></i></a>
                 </div>
               </div>
             </div>
@@ -197,5 +197,27 @@
 
 
 </body>
+
+<script>
+  var xhr = new XMLHttpRequest();
+
+  function addcart(x) {
+    console.log(x);
+    xhr.open("POST", '/api/user/addcart', true);
+    xhr.setRequestHeader('Content-Type', 'application/json');
+    xhr.send(JSON.stringify({
+      value: x
+    }));
+
+    xhr.onreadystatechange = function () {
+      if (this.readyState != 4) return;
+      
+      if (this.status == 200) {
+          var data = JSON.parse(this.responseText);
+          console.log(data);
+      }
+    };
+  }
+</script>
 
 </html>
