--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -94,7 +94,7 @@
             request.open('post', '/api/admin/login');
             request.setRequestHeader('Content-type', 'application/x-www-form-urlencoded');
             request.send(requestData);
-			// console.log(requestData);
+			console.log(responseObject);
         });
 
         function handleResponse (responseObject) {
