--- a/views/product-detail.ejs
+++ b/views/product-detail.ejs
@@ -128,7 +128,7 @@
               <tr>
                 <td colspan="2">
                   <br><br>
-                  <button class="button">ADD TO CART</button>
+                  <button onclick="addcart(<%= data[0].book_id %>)" class="button">ADD TO CART</button>
                 </td>
               </tr>
             </table>
@@ -159,4 +159,26 @@
 
 </body>
 
+<script>
+  var xhr = new XMLHttpRequest();
+
+  function addcart(x) {
+    xhr.open("POST", '/api/user/addcart', true);
+    xhr.setRequestHeader('Content-Type', 'application/json');
+    xhr.send(JSON.stringify({
+      book_id: x
+    }));
+
+    xhr.onreadystatechange = function () {
+      if (this.readyState != 4) return;
+
+      if (this.status == 200) {
+          var data = JSON.parse(this.responseText);
+          console.log(data);
+          
+      }
+    };
+  }
+
+</script>
 </html>
