--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -111,6 +111,7 @@
       <!-- ข้อมูลในการจัดส่ง -->
       <div class="container">
         <div class="row">
+          <form action="/insert" method="POST">
           <div class="col-md-8">
             
             <fieldset class="field1"> 
@@ -125,36 +126,37 @@
               <label for="address" class="font1"> ที่อยู่: </label><br>
               <input type="text" id="address" name="address" value="<%= data[0].user_address %>" disabled><br>
             <% } %> 
-          </fieldset>
-            
+           </fieldset>
+          </form>
             <a href="/cart"><button class="return">BACK</button></a>
-          <a href="/"><input type="submit" value="ACCEPT" class="submit"></a>
+          <a href="/insert"><input type="submit" value="ACCEPT" class="submit"></a>
           </div>
           <div class="col-md-4">
             <fieldset class="field2">
               <h2>สรุปรายการสินค้า</h2>
               <label for="fbook">  </label><br>
               <table>
+                <% if(data.length) { %>
+                  <% for(let i=0; i < data.length; i++) { %>
                 <tr>
-                  <td>Witchoar (วิชชอร์) เล่ม 2 : เปลวไฟแห่งเนโคร x 2</td>
-                  <td>700.00฿</td>
+                  <td name="cartqty"><%= data[i].book_name %>x<%= data[i].cart_qty %></td>
+                  <td><span class="price" name="price"><%= data[i].book_price %></span>฿</td>
                 </tr>
-                <tr>
-                  <td>Witchoar (วิชชอร์) เล่ม 3 : ถ้วยเเก้วแห่งโมนาเซีย</td>
-                  <td>310.00฿</td>
-                </tr>
+                <% } %>
+                <% } %>
                 <tr>
                   <td>ค่าจัดส่ง</td>
-                  <td>50.00฿</td>
+                  <td><span class="price">50.00฿</span></td>
                 </tr>
               </table><br>
-              <label class="font1">ราคารวมทั้งหมด <span class="price">1060.00</span>บาท</label> 
+              <label class="font1" name="total" >ราคารวมทั้งหมด <span class="price"><% if(data1.length) { %><%= data1[0].total + 50 %> <% } %></span>บาท</label> 
             </fieldset>
             <button class="place" onclick="go()" id="gopay">Place order</button>
             <img id="payImage" src="">
             <label for="image" class="font1" id="pay"></label><br>
             <input type="file" id="addimage" name="image" style="display:none"><br>
           </div>
+       
         </div>
       </div>
 
@@ -174,6 +176,7 @@
     <!-- Bootstrap core JavaScript -->
     <script src="/javascripts/fd_js/jquery.min.js"></script>
     <script src="/javascripts/fd_js/bootstrap.bundle.min.js"></script>
+    <script src="/javascripts/fd_js/cart.js"></script>
 
 
     <!-- Additional Scripts -->
