--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -129,7 +129,7 @@
            </fieldset>
           </form>
             <a href="/cart"><button class="return">BACK</button></a>
-          <a href="/insert"><input type="submit" value="ACCEPT" class="submit"></a>
+          <a href="/api/user/checkout"><input type="submit" value="ACCEPT" class="submit"></a>
           </div>
           <div class="col-md-4">
             <fieldset class="field2">
