--- a/views/checkout.ejs
+++ b/views/checkout.ejs
@@ -111,7 +111,7 @@
       <!-- ข้อมูลในการจัดส่ง -->
       <div class="container">
         <div class="row">
-          <form action="/insert" method="POST">
+          <form id="form-checkout" action="/api/user/checkout" method="POST" encType="multipart/form-data">
           <div class="col-md-8">
             
             <fieldset class="field1"> 
@@ -129,7 +129,7 @@
            </fieldset>
           </form>
             <a href="/cart"><button class="return">BACK</button></a>
-          <a href="/api/user/checkout"><input type="submit" value="ACCEPT" class="submit"></a>
+          <a href="/insert"><input type="submit" value="ACCEPT" class="submit"></a>
           </div>
           <div class="col-md-4">
             <fieldset class="field2">
